--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,8 +2,5 @@
     <h1>{{ .Title }}</h1>
 	<time datetime="{{ .Date }}" itemprop="datePublished">{{ .Date.Format "January 2, 2006" }}</time>
 	{{ .Content }}
-	<br>
-	<hr style="height:2px;border-width:0;color:gray;background-color:gray">
-	<h3>comments:</h3>
-	{{ partial "comments.html" . }}
+	{{ partial "comments/entry_point.html" . }}
 {{ end }}
