--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
     <h1>{{ .Title }}</h1>
 	<time datetime="{{ .Date }}" itemprop="datePublished">{{ .Date.Format "January 2, 2006" }}</time>
-	{{ .Content }}
+	{{ partial "heading-hash.html" .Content }}
 	{{ partial "comments/entry_point.html" . }}
 {{ end }}
